# TMBilling

./: .env.example  .gitignore  .mcp.json  LICENSE  PANDUAN_TIGHTVNC.md  PRIVACY.md  README.md  TASK-002-refactor-tauri-srp.md  TASK-003-modal-konfirmasi-tambah-waktu.md  TASK-004-live-search-debounce.md  build_and_deploy.bat  build_release.py  create_admin.py  cron_tasks.py  install.bat  package-lock.json  package.json  refactor_api.py  requirements.txt  run.py  scratch_invert.py  seed.py  start.bat  stop.bat  tailwind.config.js
WarnetAgent/Deploy/: build_and_deploy.bat  create_admin_creds.ps1  install.bat  sync_registry.ps1  uninstall.bat  write_config.ps1
WarnetAgent/MGCTM/: Cargo.toml
WarnetAgent/MGCTM/src/: main.rs
WarnetAgent/TMBilling_Monitor/: Cargo.toml  HardwareHelper.cs
WarnetAgent/TMBilling_Monitor/src/: main.rs
WarnetAgent/TMBilling_Uninstaller/: Cargo.toml
WarnetAgent/TMBilling_Uninstaller/src/: main.rs
WarnetAgent/mtm/: Cargo.toml
WarnetAgent/mtm/src/: main.rs
WarnetClient/TMBillingTauri/: package-lock.json  package.json  tailwind.config.js
WarnetClient/TMBillingTauri/src-tauri/: Cargo.toml  config.ini  tauri.conf.json
WarnetClient/TMBillingTauri/src-tauri/icons/: icon.icns
WarnetClient/TMBillingTauri/src-tauri/src/: main.rs  models.rs  state.rs
WarnetClient/TMBillingTauri/src-tauri/src/commands/: auth_commands.rs  mod.rs  network_commands.rs  system_commands.rs  window_commands.rs
WarnetClient/TMBillingTauri/src-tauri/src/services/: mod.rs  polling.rs  setup.rs  tray.rs  window_events.rs
WarnetClient/TMBillingTauri/src-tauri/src/utils/: api.rs  keyboard.rs  mod.rs  screenshot.rs  security.rs  window_manager.rs
WarnetClient/TMMonitor/: Program.cs  TMMonitor.csproj  config.ini
app/: .env.example  __init__.py  config.py  models.py
app/middleware/: __init__.py  auth.py  ip_whitelist_middleware.py
app/models/: __init__.py  grup.py  hardware.py  member.py  menu.py  paket.py  pc.py  sesi.py  settings.py  tournament.py  transaksi.py  user.py
app/repositories/: __init__.py  grup_repository.py  hardware_repository.py  member_repository.py  menu_repository.py  paket_repository.py  pc_repository.py  process_repository.py  sesi_repository.py  settings_repository.py  transaksi_repository.py  user_repository.py
app/routes/: __init__.py  auth.py  auth_kasir_routes.py  auth_routes.py  backup_routes.py  blackout_routes.py  client_routes.py  dashboard_routes.py  grup_routes.py  kasir.py  layout.py  member_portal_routes.py  member_routes.py  menu_routes.py  monitor_routes.py  paket.py  paket_routes.py  pc_routes.py  report_routes.py  sesi_routes.py  session.py  settings_routes.py  tournament_routes.py  user_routes.py
app/services/: __init__.py  auth_kasir_service.py  auth_service.py  backup_service.py  blackout_service.py  client_service.py  dashboard_service.py  grup_service.py  hardware_service.py  member_service.py  menu_service.py  paket_service.py  pc_service.py  report_service.py  sesi_service.py  settings_service.py  transaksi_service.py  user_service.py  vnc_service.py
app/utils/: helpers.py  logger.py  mikrotik_api.py  pdf_helper.py  (+2 more)
docs/: ARCHITECTURE.md  BACKEND_GUIDE.md  CLOUD_BACKUP_DESIGN.md  CODEBASE_DOCUMENTATION.md  DESIGN_IP_WHITELIST_SESSION_DESTROY.md  DIAGRAMS.md  FEATURE_FLOOR_PLAN.md  FEATURE_IP_WHITELIST.md  FEATURE_MULTI_TIMEZONE.md  FEATURE_OWNER_ANALYTICS.md  FEATURE_PLUGIN_SYSTEM.md  FRONTEND_GUIDE.md  MAINTENANCE_UI_STANDARDS.md  NEW_FEATURES_GUIDE.md  TECHNICAL_DOCS.md  UPGRADE_RUPIAH_AND_POS.md  design_metode_pembayaran.md  laporan_tugas_akhir.md
install_scripts/: gen_env.py  init_db.py
scripts/: migrate_timezone_to_utc.py
(+241 files in other folders)
