[package]
name = "mgctm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "MGCTM"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.5"
winapi = { version = "0.3.9", features = ["processthreadsapi", "securitybaseapi", "winbase", "winnt", "handleapi", "tlhelp32", "synchapi", "errhandlingapi"] }
sha2 = "0.10"
once_cell = "1.19"




