[package]
name = "tm_monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "TMMonitor"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wmi = "0.13"
winreg = "0.5"
once_cell = "1.19"
