[package]
name = "uninstaller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "TMBilling_Uninstaller"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "windef", "wingdi"] }
winreg = "0.5"
sha2 = "0.10"
once_cell = "1.19"
configparser = "3.1"
