[package]
name = "tmbilling"
version = "0.1.0"
description = "TMBilling Client"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mac_address = "1.1"
local-ip-address = "0.5"
tokio = { version = "1.52.3", features = ["full"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
configparser = "3.1"
winreg = "0.5"
sha2 = "0.10"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader"
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
